# factor-graph

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: 1d_line_fit.py  converge_to_smooth_no_measurement.py  diverge_from_line.py  diverge_from_point.py  diverge_from_point_app.py  push_apart.py
examples/experiments/: MPC.md  cov_plot.py  cov_plot2.py  cov_plot3.py  mpc.py  pipsize.py
src/factor_graph/: app.py  factor.py  factor_graph.py  gaussian.py  gbp.py  gbp_settings.py  loss.py  meas_model.py  utility_functions.py  variable_node.py
