[tool.poetry]
name = "factor-graph"
version = "0.1.0"
description = "bare bones implementation of factor graphs and gaussian belief propagation."
authors = ["W. Meijer <houterm@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "factor_graph", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
